--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
-DATABASE=mongodb://localhost:27017/abc_api
+DATABASE=mongodb+srv://sudhara:TbhvHfZoQrRJTvRq@cluster0.rbmxa.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 SECRETE=AbcKey
+
